@@ -26,6 +26,8 @@
 	(DB-OPEN): accept :FLAGS
 	(db_get_open_flags): new function (uses check_db_open_flags_to_list())
 	(DB-GET-OPTIONS): accept :OPEN
+	(bdb_ac_flags): replaces db_put_flags()
+	(ENV-DBREMOVE, DBE-DBRENAME, DB-DEL, DB-TRUNCATE, DB-PUT): use it
 
 2005-04-21  Sam Steingold  <sds@gnu.org>
 
